--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ section {
 .hero-img {
     position: absolute;
     background-position: right;
-    margin-left: 580px;
+    margin-left: 750px;
     margin-top: 60px;
     z-index: -1000;
 }
@@ -248,26 +248,34 @@ header.sticky {
     font-size: var(--h2-font);
 }
 
+.box-content {
+    display: flex;
+    justify-content: center;
+}
+
 .project-content {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, auto));
     align-items: center;
     gap: 2.3rem;
     margin-top: 4.2rem;
+    width: 1000px;
 }
 
 .box {
     padding: 80px 40px 66px;
-    background: #2d343f;
+    /* background: #2d343f; */
     border-radius: 28px;
     border: 1px solid transparent;
     box-shadow: 0 0 5px var(--main-color);
     transition: all .50s ease;
     cursor: pointer;
+    background: url(img/Artikel.png);
 }
 
 .box img {
     margin-bottom: 20px;
+    width: 800px;
 }
 
 .box h3 {
@@ -311,70 +319,64 @@ header.sticky {
     transform: translateY(-5px) scale(1.03);
 }
 
-.portfolio {
+/* skill */
+h3 {
+    margin: 5px;
+}
+
+.skill {
     background: var(--second-bg-color);
 }
 
-.portfolio-content {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, auto));
-    align-items: center;
-    gap: 2.3rem;
-    margin-top: 4.2rem;
-}
-
-.row img {
-    height: auto;
-    width: 100%;
-    border-radius: 28px;
-    margin-bottom: 1.4rem;
-}
-
-.row {
-    background: #2d343f;
-    border-radius: 29px;
-    border: 1px solid transparent;
-    box-shadow: 0 0 5px var(--main-color);
+.skill-content {
+    width: 500px;
+    margin: 60px auto;
+    color: #fff;
     padding: 20px;
-    transition: all .50s ease;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
-.main-row {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 0.5rem;
+.skill-content li {
+    margin: 20px 0;
+    padding: 10px;
 }
 
-.row h5 {
-    font-size: 20px;
-    font-weight: 600;
-    color: var(--other-color);
+.bar {
+    background: #353b48;
+    display: block;
+    height: 20px;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.5 cubic-bezier(.25,.8,.25,1);
 }
 
-.row i {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    width: 55px;
-    height: 55px;
-    font-size: 17px;
-    border-radius: 50%;
-    color: var(--text-color);
-    background: #075fe4;
+.bar:hover {
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
-.row h4 {
-   font-size: 25px; 
-   font-weight: 700;
-   margin-bottom: 10px;
-   line-height: 1.4;
+.bar span {
+    height: 20px;
+    float: left;
+    background: linear-gradient(135deg, rgba(236, 0, 140, 1)0%, rgba(252, 103, 103 ,1)100%);
 }
 
-.row:hover {
-    border: 1px solid var(--main-color);
-    transform: translateY(-5px) scale(1.03);
-    cursor: pointer;
+.html {
+    width: 90px;
+    animation: html 3s ease infinite forwards running;
+}
+.css {
+    width: 70px;
+    animation: css 3s ease infinite forwards running;
+}
+.javascript {
+    width: 20px;
+    animation: javascript 3s ease  infinite forwards running;
+}
+
+.contact {
+    background: var(--bg-color);
 }
 
 .contact-form {
@@ -456,6 +458,9 @@ form .send-btn:hover {
 }
 
 @media (max-width: 1380px) {
+    .box img {
+        width: 100%;
+    }
     header {
         padding: 20px 5%;
     }
@@ -480,8 +485,8 @@ form .send-btn:hover {
     }
     .box img {
         width: 100%;
-        height: 60px;
-        max-width: 60px;
+        /* width: 280px; */
+        /* max-width: 60px; */
     }
     .box h3 {
         font-size: 21px;
@@ -507,6 +512,9 @@ form .send-btn:hover {
         --h1-font: 4rem;
         --h2-font: 2.2rem;
         --p-font: 15px;
+    }
+    .box img {
+        width: 100%;
     }
 }
 
@@ -539,10 +547,18 @@ form .send-btn:hover {
     .navlist.active {
         right: 0;
     }
+
+    .box img {
+        width: 100%;
+    }
 }
 
 @media (max-width: 680px) {
     .main-content p {
+        width: 100%;
+    }
+
+    .box img {
         width: 100%;
     }
 }
@@ -560,5 +576,34 @@ form .send-btn:hover {
         border-radius: 50%;
         object-fit: cover;
         margin: 0 auto;
+    }
+
+    .box img {
+        width: 100%;
+    }
+}
+
+@keyframes html {
+    0% {
+        width: 0%;
+    }
+    100% {
+        width: 90%;
+    }
+}
+@keyframes css {
+    0% {
+        width: 0%;
+    }
+    100% {
+        width: 70%;
+    }
+}
+@keyframes javascript {
+    0% {
+        width: 0%;
+    }
+    100% {
+        width: 15%;
     }
 }
